# prompt-sentinel-flow

./: .env  .env.e2e.example  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  about-app.md  bun.lockb  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  policy_bypass.md
.github/workflows/: ci.yml
.lovable/: plan.md
deploy/docker-compose/: .env.example  README.md  docker-compose.yml  nginx.conf
docs/: CONTRIBUTING-LOVABLE.md  anveguard-vs-triage-comparison.md  triage-parity-comparison.md
docs/compliance/: SOC2.md
e2e/: 01-navigation.spec.ts  02-logs-audit.spec.ts  03-keys.spec.ts  04-endpoints.spec.ts  05-policies.spec.ts  06-policies-lifecycle.spec.ts  07-full-journey.spec.ts  README.md  fixtures.ts  global.setup.ts
public/: ai-context.json  ai.txt  llms-full.txt  llms.txt  robots.txt  sitemap.xml
public/.well-known/: agent-card.json  ai-plugin.json
remotion/: STORYBOARD.md
remotion/scripts/: generate-vo.sh  mux-audio.sh  render-mac.mjs  render-remotion.mjs
remotion/src/: MainVideo.tsx  ProductHuntVideo.tsx  Root.tsx
scripts/: test-flow.sh
sdks/python-langchain/: README.md  pyproject.toml
sdks/python-langchain/src/anveguard/: __init__.py  callbacks.py  chat.py  errors.py  langgraph.py
sdks/python-langchain/tests/: test_chat.py
sdks/rag-scanner/: README.md  pyproject.toml
sdks/rag-scanner/src/anveguard_rag/: __init__.py  cli.py  scanner.py
sdks/rag-scanner/tests/: test_scanner.py
src/: App.tsx  index.css  main.tsx
src/components/: Logo.tsx  aliases-sheet.tsx  command-palette.tsx  dashboard-sidebar.tsx  empty-state.tsx  error-boundary.tsx  guided-tour.tsx  help-hint.tsx  help-panel.tsx  key-value.tsx  keyword-chip-input.tsx  marketing-shell.tsx  mobile-sidebar.tsx  next-step-card.tsx  onboarding-walkthrough.tsx  page-header.tsx  quickstart-help-panel.tsx  replay-button.tsx  save-regression-button.tsx  seo.tsx  skeletons.tsx  topbar.tsx  tour-launcher.tsx  wizard.test.tsx  wizard.tsx
src/lib/: api.ts  clerk-appearance.ts  clerk.ts  eval-api.ts  mock-data.ts  proxy-response.test.ts  proxy-response.ts  replay.test.ts  replay.ts  tours.test.ts  tours.ts
src/pages/: Landing.tsx  Mcp.tsx  NotFound.tsx  Research.tsx  SignIn.tsx  SignUp.tsx  Simulation.tsx
supabase/: config.toml
(+184 files in other folders)
