[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anveguard"
version = "0.1.0"
description = "AnveGuard Python SDK — drop-in LangChain / LangGraph integration for the open-source LLM firewall."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "CiterLabs", email = "hello@citerlabs.com" }]
keywords = ["anveguard", "llm", "firewall", "security", "langchain", "langgraph", "openai", "prompt-injection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-openai>=0.2.0", "langchain-core>=0.3.0"]
langgraph = ["langgraph>=0.2.0", "langchain-openai>=0.2.0", "langchain-core>=0.3.0"]
all = ["langchain-openai>=0.2.0", "langchain-core>=0.3.0", "langgraph>=0.2.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://guard.citerlabs.com"
Repository = "https://github.com/ANVE-AI/prompt-sentinel-flow"
Documentation = "https://guard.citerlabs.com/docs"
